소켓 배웠당

--- a/client.html
+++ b/client.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h2>클라이언트</h2>
+    <h2>클라이언트~</h2>
     <form>
         <p>닉네임: <input type="text" id="nickname"> <button type="button" onclick="setNickname()">설정</button></p>
         <p>채널: <input type="text" id="channel"> <button type="button" onclick="setChannel()">입장</button></p>
